--- a/styles/language_dialog.qss
+++ b/styles/language_dialog.qss
@@ -6,36 +6,40 @@ QDialog {
 }
 
 .title {
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 600;
     color: #2b6cb0;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
 }
 
 .subtitle {
-    font-size: 14px;
-    color: #4a5568;
-    margin-bottom: 16px;
+    font-size: 16px;
+    color:rgb(27, 30, 35);
+    margin-bottom: 10px;
+    margin-top:10px;
 }
 
 .combo-box {
-    min-width: 280px;
+    min-width: 250px;
     padding: 10px;
     border: 1px solid #cbd5e0;
     border-radius: 8px;
     background: white;
-    font-size: 14px;
+    font-size: 15px;
     selection-background-color: #4299e1;
 }
 
 .combo-box:hover {
-    border-color: #a0aec0;
+    border-color:rgb(170, 186, 207);
 }
 
 .combo-box::drop-down {
-    width: 30px;
-    border-left: 1px solid #cbd5e0;
+     width: 0;
+    height: 0;
+   
 }
+
+
 
 .checkbox {
     font-size: 13px;
@@ -71,7 +75,7 @@ QDialog {
 }
 
 .danger-button {
-    background-color: #f56565;
+    background-color:rgb(56, 147, 104);
     color: white;
     border: none;
     border-radius: 8px;
@@ -81,5 +85,5 @@ QDialog {
 }
 
 .danger-button:hover {
-    background-color: #e53e3e;
+    background-color:rgb(175, 38, 136);
 }
