--- a/styles/main_window.qss
+++ b/styles/main_window.qss
@@ -89,6 +89,10 @@ QLineEdit[class="answer-input"][theme="dark"] {
     background-color: #2c2c2c;
     color: #ffffff;
     border: 2px solid #5dade2;
+    font-size: 20px;
+    
+    padding: 6px 10px;  
+    min-width: 140px;
 }
 
 QLineEdit[class="answer-input"][theme="dark"]:focus {
